# OTB

./: .gitignore  AGENTS.md  DESIGN.md  IMPLEMENTATION.md  LIVE_RETRIEVAL_FIX.md  OTB Weather Market Resolution Case Study.md  README.md  docker-compose.yml  evaluate.py  litellm_config.yaml  pyproject.toml  requirements.txt  resolve.py  resolve_otb.py
config/: pipeline.yaml
data/: demo_cases.json  markets.json
data/fixtures/: KBKF_20260531_temperature_max.json  KBKF_20260708_temperature_max.json  KSEA_20260601_precipitation_sum.json  RJTT_20260601_temperature_max.json  RJTT_20260601_temperature_min.json  RKPK_20260601_temperature_max.json  RKSI_20260601_temperature_min.json
data/schema/: market_input.schema.json
demo/: prompt_regression.py
design/: design.html
docs/: demo-notes.md  design.html  next-steps.md  observability-demo.md
gold_visible/: answers.json
scripts/: seed_langfuse_prompts.py
src/decision/: confidence.py  models.py  resolver.py  reviewer.py
src/normalization/: __init__.py  anomaly.py  convert.py  models.py  quality.py  round.py  verify.py
src/observability/: __init__.py  llm.py  logging.py  tracing.py
src/orchestration/: __init__.py  config.py  context.py  runner.py  steps.py
src/otb/: __init__.py  api.py  transform.py
src/output/: __init__.py  formatter.py
src/reconciliation/: __init__.py  comparator.py  finality.py  models.py  quality_gate.py  rule_parser.py
src/retrieval/: __init__.py  dispatch.py  guardrails.py  llm_extractor.py  models.py  noaa.py  regex_fallback.py  replay.py  spec.py  station_registry.py  (+2 more)
tests/: conftest.py
(+10 files in other folders)
