[project]
name = "otb-weather-resolver"
version = "0.1.0"
description = "Agentic resolver for weather prediction markets in UMA's Optimistic Oracle (OTB) framework"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external resources",
]
